--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,324 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
-}
+  }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
-}
+  display: flex;
+  background-color:  #f2f2f2;
+  position: relative;
+  color: black;
+  align-items: center;
+   }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
+  .description {
+    margin: 0 auto;
+    padding-top: 100px;
+    display: flex;
+    width: 80%;
+  }
+
+  .logo {
+    left: 64px;
+  }
+
+  .two-columns {
+    display: flex;
+    flex-direction: row;
+  }
+
+
+  .digits {
+    width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    }
+
+  .table {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-bottom: 100px;
+  }
+
+  .feynman {
+    height: 890px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+    background-color:  #f2f2f2;
+  }
+
+  .kaufman {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    background-color: #1f1f1f;
+    color: white;
+    overflow: hidden;
+  }
+
+  .footer {
+    min-height: 360px;
+    background-color: #1f1f1f;
+    color: white;
+    display: flex;
+  }
+
+   .logo__place_header {
+    width: 183px;
+    top: 30px;
+    position: absolute;
+    z-index: 1;
+  }
+
+   .header__title {
+    width: 730px;
+    font-size: 96px;
+    font-weight: bold;
+    margin: 0;
+    padding-left: 64px;
+    z-index: 2;
+  }
+
+  .header__subtitle {
+    font-size: 18px;
+    width: 388px;
+    position: absolute;
+    left: 64px;
+    bottom: 30px;
+    margin: 0;
+    z-index: 1;
+  }
+
+  .header-link {
+    color: #2f80ed;
+    text-decoration: underline;
+  }
+
+  .header__main-illustration {
+    width: 765px;
+    height: 608px;
+    background-image: url(../images/header-image.png);
+    margin: 0;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+  }
+
+ .header__square-pic {
+  background-color: #2f80ed;
   height: 568px;
   width: 568px;
+  position: absolute;
+  background-size: contain;
+  top: 64px;
+  right: 0;
+  }
+
+.two-columns__brief {
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 1,2;
+  width: 175px;
+  color: #2f80ed;
+  margin: 0 auto;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.two-columns__main-text {
+  font-size: 24px;
+  line-height: 34px;
+  width: 80%;
+  min-width: 784px;
+  justify-content: space-between;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+
+.table__title {
+  font-size: 60px;
+  line-height: 1,15;
+  font-weight: bold;
+  width: 60%;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 100px;
+  }
+
+.table__subtitle {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 20px;
+  }
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+  list-style: none;
+ }
+
+.table__heading {
+  font-size: 24px;
+  line-height: 1,15;
+  font-weight: bold;
+  padding-top: 60;
+  margin: 0;
+}
+
+.table__text {
+  font-size: 18px;
+  line-height: 1,2;
+  padding-top: 20px;
+}
+
+.feynman__title {
+  width: 648px;
+  font-size: 120px;
+  line-height: 1,15;
+  font-weight: bold;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 100px;
+  z-index: 1;
+}
+
+.feynman__subtitle {
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  margin: 0 auto;
+  padding-top: 70px;
+  z-index: 1;
+  }
+
+.feynman__link {
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  margin: 0;
+  color: #2f80ed;
+  text-decoration: underline;
+  }
+
+.feynman__illustration {
+  width: 867px;
+  height: 637px;
+  background-image: url(../images/feynman.png);
+  margin: 0;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  }
+
+.table__title_theme_dark {
+  padding-top: 90px;
+}
+
+.table__theme_dark {
+  width: 1100px;
+  justify-content: space-around;
+  margin: 0 auto;
+  padding-bottom: 90px;
+  z-index: 1;
+}
+
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
   margin-top: 80px;
+  margin-right: 0;
+  list-style: none;
+  }
+
+.triangle {
+  width: 877px;
+  height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: -270px;
+  top: 0;
+  }
+
+.footer__columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
+
+.footer__column_content_copyright {
+  display: flex;
+  flex-basis: 711px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo__place_footer {
+  width: 183px;
+  height: 35px;
+  }
+
+.footer__author {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  margin: 18px 0;
+}
+
+.footer__column_links {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  margin: 0 auto;
+  }
+
+.footer__column_heading {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+  padding-bottom: 20px;
+}
+
+.footer__column_content_social {
+ margin: 0 auto;
+}
+
+.footer__social_icon {
+  font-size: 18px;
+  margin: 0;
+  padding-bottom: 16px;
+  }
+
+.footer__column_link {
+  margin:0;
+  padding-bottom: 16px;
+  }
+
+  .footer__icons {
+    width: 16px;
+    height: 16px;
+  }
